@@ -1,0 +1,3 @@
+prog: timing_safe
+vgopts: -q
+
