@@ -1,54 +1,0 @@
-Conditional jump or move depends on uninitialised value(s)
-   at 0x........: timingsafe_bcmp (vg_replace_strmem.c:1228)
-   by 0x........: main (timingsafe.c:30)
-
-Conditional jump or move depends on uninitialised value(s)
-   at 0x........: timingsafe_bcmp (vg_replace_strmem.c:0)
-   by 0x........: main (timingsafe.c:30)
-
-Conditional jump or move depends on uninitialised value(s)
-   at 0x........: timingsafe_memcmp (vg_replace_strmem.c:1227)
-   by 0x........: main (timingsafe.c:31)
-
-Conditional jump or move depends on uninitialised value(s)
-   at 0x........: timingsafe_memcmp (vg_replace_strmem.c:0)
-   by 0x........: main (timingsafe.c:31)
-
-Invalid read of size 1
-   at 0x........: timingsafe_bcmp (vg_replace_strmem.c:1228)
-   by 0x........: main (timingsafe.c:35)
- Address 0x........ is 0 bytes after a block of size 12 alloc'd
-   at 0x........: malloc (vg_replace_malloc.c:...)
-   ...
-   by 0x........: main (timingsafe.c:33)
-
-Invalid read of size 1
-   at 0x........: timingsafe_memcmp (vg_replace_strmem.c:1227)
-   by 0x........: main (timingsafe.c:36)
- Address 0x........ is 0 bytes after a block of size 12 alloc'd
-   at 0x........: malloc (vg_replace_malloc.c:...)
-   ...
-   by 0x........: main (timingsafe.c:33)
-
-Invalid read of size 1
-   at 0x........: timingsafe_bcmp (vg_replace_strmem.c:1228)
-   by 0x........: main (timingsafe.c:40)
- Address 0x........ is 0 bytes inside a block of size 12 free'd
-   at 0x........: free (vg_replace_malloc.c:...)
-   by 0x........: main (timingsafe.c:38)
- Block was alloc'd at
-   at 0x........: malloc (vg_replace_malloc.c:...)
-   ...
-   by 0x........: main (timingsafe.c:33)
-
-Invalid read of size 1
-   at 0x........: timingsafe_memcmp (vg_replace_strmem.c:1227)
-   by 0x........: main (timingsafe.c:41)
- Address 0x........ is 0 bytes inside a block of size 12 free'd
-   at 0x........: free (vg_replace_malloc.c:...)
-   by 0x........: main (timingsafe.c:38)
- Block was alloc'd at
-   at 0x........: malloc (vg_replace_malloc.c:...)
-   ...
-   by 0x........: main (timingsafe.c:33)
-
