@@ -1,3 +1,0 @@
-prog: timingsafe
-vgopts: -q
-
